alignment issues with arabic

--- a/src/app/components/onboard/onboard.component.scss
+++ b/src/app/components/onboard/onboard.component.scss
@@ -390,6 +390,8 @@ select option {
     // height: 50px;
     flex-wrap: wrap;
     padding: 5px;
+    max-width: 450px;
+    margin: 0 auto;
     // margin-top: 30px;
   }
   
